--- a/Flickster/app/src/main/AndroidManifest.xml
+++ b/Flickster/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.MovieDetailActivity"></activity>
+        <activity android:name=".activities.QuickPlayActivity"></activity>
     </application>
 
 </manifest>
