--- a/Flickster/app/build.gradle
+++ b/Flickster/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'org.parceler:parceler-api:1.1.1'
+    compile 'jp.wasabeef:picasso-transformations:2.1.0'
     apt 'org.parceler:parceler:1.1.1'
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
